chore(release): refactor release search
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>